force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Adjustment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Adjustment_Frequency__c</fullName>
    <description>This field indicates the adjustment frequency for and adjustable rate loan in months.</description>
    <label>Adjustment Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>