force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Adjustment_Reason__c</fullName>
    <description>Users populate this required field with the reason for the rate adjustment. By default, it is blank.</description>
    <inlineHelpText>Select the reason for the rate adjustment.</inlineHelpText>
    <label>Adjustment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitive Adjustment</fullName>
            </value>
            <value>
                <fullName>Additional Cross Product Sell</fullName>
            </value>
            <value>
                <fullName>Customer Loyalty</fullName>
            </value>
            <value>
                <fullName>Market Adjustment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>