force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Amortization__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Amortization__c</fullName>
    <description>This field indicates the number of months over which the loan is amortized</description>
    <label>Amortization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>