force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Average_Yield__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Average_Yield__c</fullName>
    <description>This field indicates the average interest income divided by the average outstanding assets</description>
    <formula>IF( LLC_BI__Average_Assets__c &gt; 0,  LLC_BI__Interest_Income__c /  LLC_BI__Average_Assets__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Yield</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>