force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__CalculatedEffectiveLoanToValue__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__CalculatedEffectiveLoanToValue__c</fullName>
    <description>This field indicates the PrecisionLender Scenario Financial Statement Loan Effective LTV.</description>
    <label>Effective LTV</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>