force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Caps_Floors_Summary__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Caps_Floors_Summary__c</fullName>
    <description>This field is a simple text summary of any Caps &amp; Floors. Only relevant for Floating or Adjustable Loans</description>
    <label>Caps &amp; Floors Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>