force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Cash_to_Close__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Cash_to_Close__c</fullName>
    <description>The system auto-populates this currency field to display the total cash to close amount the borrower will pay. By default, this field is based on a calculated value.</description>
    <inlineHelpText>This field displays the predetermined total cash to close value.</inlineHelpText>
    <label>Cash to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>