force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Changes_Approved__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Changes_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates if the changes have been approved.</description>
    <label>Changes Approved</label>
    <type>Checkbox</type>
</CustomField>