force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Closing_Costs__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Closing_Costs__c</fullName>
    <description>The system automatically populates this currency field to capture the borrower’s total closing costs. By default, this field is based on a calculated value.</description>
    <inlineHelpText>This field displays the total closing costs value.</inlineHelpText>
    <label>Closing Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>