force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Expected_Life__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Expected_Life__c</fullName>
    <description>This field indicates the expected life of the loan in months.</description>
    <label>Expected Life</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>