force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Fixed_Period__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Fixed_Period__c</fullName>
    <description>This field indicates the initial fixed period for an Adjustable Rate Loan, as such it is only applicable when the Rate Type is Adjustable.</description>
    <label>Fixed Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>