force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__HCM_APOR_Spread__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HCM_APOR_Spread__c</fullName>
    <description>The system automatically populates this field with the High-Cost Mortgage percentage rate-spread defined by the FFIEC. By default, this field is blank.</description>
    <inlineHelpText>This field displays the HCM rate-spread for an offer.</inlineHelpText>
    <label>HCM APOR Spread</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>