force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__HCM_Maximum_Points_And_Fees__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HCM_Maximum_Points_And_Fees__c</fullName>
    <description>The system automatically populates this field to indicate the maximum points and fees an offer can have before it qualifies as High-Cost Mortgage. By default, this field is blank.</description>
    <inlineHelpText>This field indicates the HCM maximum points and fees for an offer.</inlineHelpText>
    <label>HCM Maximum Points and Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>