force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__HCM_Points_And_Fees_Test__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HCM_Points_And_Fees_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically selects this checkbox to indicate the points and fees for an offer exceeds High-Cost Mortgage maximum points and fees. By default, this field is deselected.</description>
    <inlineHelpText>This field indicates if the points and fees for an offer exceeds HCM maximum points and fees.</inlineHelpText>
    <label>HCM Points and Fees Test</label>
    <type>Checkbox</type>
</CustomField>