force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__HPML_APOR__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HPML_APOR__c</fullName>
    <description>The system automatically populates this field with the Average Prime Offer Rate percentage when compliance calculations are completed for Higher-Priced Mortgage Loan. By default, this field is blank.</description>
    <inlineHelpText>This field displays the APOR for an offer when HPML compliance calculations are completed.</inlineHelpText>
    <label>HPML APOR</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>