force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__HPML_APOR_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__HPML_APOR_Effective_Date__c</fullName>
    <description>The system automatically populates this field with the effective date of the FFIEC APOR Index referenced for Higher-Priced Mortgage Loan. By default, this field is blank.</description>
    <inlineHelpText>This field displays the effective date of the APOR Index used to complete HPML compliance calculations for an offer.</inlineHelpText>
    <label>HPML APOR Effective Date</label>
    <type>Date</type>
</CustomField>