force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Index__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Index__c</fullName>
    <description>This field indicates the Index Name for Floating and Adjustable Rate loans (e.g. Prime, 1M LIBOR, etc.)</description>
    <label>Index</label>
    <length>50</length>
    <type>Text</type>
</CustomField>