force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Initial_Fees__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Fees__c</fullName>
    <description>This field indicates the percentage portion of the initial fees.</description>
    <label>Initial Fees (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>