force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Initial_Fees_Currency__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Fees_Currency__c</fullName>
    <description>This field indicates the fixed dollar portion of the initial fees.</description>
    <label>Initial Fees ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>