force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Initial_Fees_Text__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Initial_Fees_Text__c</fullName>
    <description>This field indicates the initial fees related to the loan</description>
    <formula>TEXT( ROUND( LLC_BI__Initial_Fees__c * 100,2)) &amp; &quot;% + &quot; &amp;

			&quot;$&quot; &amp;
			IF(
			LLC_BI__Initial_Fees_Currency__c &gt;= 1000000,
			TEXT(FLOOR( LLC_BI__Initial_Fees_Currency__c / 1000000)) &amp; &quot;,&quot;,
			&quot;&quot;) &amp;
			IF(
			LLC_BI__Initial_Fees_Currency__c &gt;= 1000,
			RIGHT(TEXT(FLOOR(LLC_BI__Initial_Fees_Currency__c/ 1000)), 3) &amp; &quot;,&quot;,
			&quot;&quot;) &amp;
			RIGHT(TEXT(FLOOR(LLC_BI__Initial_Fees_Currency__c)), 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Fees</label>
    <type>Text</type>
</CustomField>