force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Interest_Options__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Interest_Options__c</fullName>
    <description>This system populates this field with a summary of the Interest Options, such as Payment Frequency. By default, it is blank.</description>
    <label>Interest Options</label>
    <length>255</length>
    <type>Text</type>
</CustomField>