force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Amount__c</fullName>
    <description>This currency field is optional. It represents the amount of the loan for this pricing option.</description>
    <label>Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>