force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Loan_Gross_Funding__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Loan_Gross_Funding__c</fullName>
    <description>The system populates the scenario financial statement Loan Gross Funding. By default, it is blank.</description>
    <label>Loan Gross Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>