force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Maturity_Date__c</fullName>
    <description>This date field represents when the loan will reach maturity.</description>
    <label>Maturity Date</label>
    <type>Date</type>
</CustomField>