force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Memo__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system populates this field to indicate the memo linked to the pricing scenario. By default, it is blank.</description>
    <label>Memo</label>
    <referenceTo>LLC_BI__Credit_Memo_Modifcation__c</referenceTo>
    <relationshipLabel>Pricing_Options</relationshipLabel>
    <relationshipName>Pricing_Options</relationshipName>
    <type>Lookup</type>
</CustomField>