force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__MLA_Status__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__MLA_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when using the pricing option.</description>
    <inlineHelpText>Users select or integration populates this optional boolean field to indicate if a consumer qualifies for the Military Lending Act when using the pricing option.</inlineHelpText>
    <label>MLA Status</label>
    <type>Checkbox</type>
</CustomField>