force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Net_Interest_Margin__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Net_Interest_Margin__c</fullName>
    <description>This is the Net Interest Margin - the Net Interest Income divided by the Average Outstanding Assets</description>
    <formula>IF( LLC_BI__Average_Assets__c &gt; 0, LLC_BI__Interest_Income__c /  LLC_BI__Average_Assets__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Interest Margin</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>