force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Odd_Days_Amount_Per_Diem__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Odd_Days_Amount_Per_Diem__c</fullName>
    <description>The system automatically populates this optional currency field to determine the daily cost of the odd days interest the loan accrues. By default, it is blank.</description>
    <inlineHelpText>The daily cost of odd days interest on a loan.</inlineHelpText>
    <label>Odd Days Amount Per Diem</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>