force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Opportunity</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pricing_Options</relationshipLabel>
    <relationshipName>Pricing_Options</relationshipName>
    <type>Lookup</type>
</CustomField>