force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Other_Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Other_Income__c</fullName>
    <description>The system populates the scenario financial statement Other Income. By default, it is blank.</description>
    <label>Other Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>