force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Payment_Schedule__c</fullName>
    <description>This field represents the frequency of payments on the loan.</description>
    <label>Payment Schedule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>