force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Pre_Tax_Income__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pre_Tax_Income__c</fullName>
    <description>The system populates the scenario financial statement Pre-Tax Income. By default, it is blank.</description>
    <label>Pre-Tax Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>