force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Pricing_Basis__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Pricing_Basis__c</fullName>
    <description>This field represents whether the underlying base rate for a loan is fixed or variable.</description>
    <label>Pricing Basis</label>
    <length>100</length>
    <type>Text</type>
</CustomField>