force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Rate__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate__c</fullName>
    <description>This percent field auto-populates after pricing option calculations. It indicates the interest rate for this pricing option.</description>
    <label>Rate</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>