force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Rate_Floor__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Floor__c</fullName>
    <description>The system automatically populates this optional percentage field to specify the minimum threshold of a loan&apos;s interest rate for a set period of time.</description>
    <inlineHelpText>This system-populated field displays the minimum possible percentage of a loan&apos;s interest rate for a set period of time.</inlineHelpText>
    <label>Rate Floor</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>