force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Rate_Type__c</fullName>
    <description>This field indicates the Rate Type (Fixed, Floating or Adjustable)</description>
    <label>Rate Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>