force-app/main/default/objects/LLC_BI__Pricing_Option__c/fields/LLC_BI__Repricing_Duration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Repricing_Duration__c</fullName>
    <description>This field indicates the Repricing duration based on loan type. Floating (Adjustment Frequency), Fixed (Maturity), Adjustable (Fixed Period).</description>
    <label>Repricing Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>